@@ -1,6 +1,5 @@
 ? cat(1);"Predefined Variables";cat(0)
 ? "OS VER =0x"; HEX$(osver)
-? "OS NAME="; osname
 ? "SB VER =0x"; HEX$(sbver)
 ? "PI     ="; pi
 ? "XMAX   ="; xmax
