@@ -281,7 +281,6 @@ void exec_setup_predefined_variables() {
   setsysvar_num(SYSVAR_PI, SB_PI);
   setsysvar_int(SYSVAR_XMAX, os_graf_mx - 1);
   setsysvar_int(SYSVAR_YMAX, os_graf_my - 1);
-  setsysvar_int(SYSVAR_BPP, os_graphics ? os_color_depth : 4);
   setsysvar_int(SYSVAR_TRUE, -1);
   setsysvar_int(SYSVAR_FALSE, 0);
   setsysvar_int(SYSVAR_LINECHART, 1);
