@@ -42,24 +42,20 @@
 /*
  *   predefined system variables - index
  */
-#define SYSVAR_OSNAME       0  /**< system variable, OSNAME$   @ingroup var */
-#define SYSVAR_SBVER        1  /**< system variable, SBVER     @ingroup var */
-#define SYSVAR_PI           2  /**< system variable, PI        @ingroup var */
-#define SYSVAR_XMAX         3  /**< system variable, XMAX      @ingroup var */
-#define SYSVAR_YMAX         4  /**< system variable, YMAX      @ingroup var */
-#define SYSVAR_BPP          5  /**< system variable, BPP       @ingroup var */
-#define SYSVAR_TRUE         6  /**< system variable, TRUE      @ingroup var */
-#define SYSVAR_FALSE        7  /**< system variable, FALSE     @ingroup var */
-#define SYSVAR_LINECHART    8  /**< system variable, LINECHART @ingroup var */
-#define SYSVAR_BARCHART     9  /**< system variable, BARCHART  @ingroup var */
-#define SYSVAR_PWD          10 /**< system variable, PWD$      @ingroup var */
-#define SYSVAR_HOME         11 /**< system variable, HOME$     @ingroup var */
-#define SYSVAR_COMMAND      12 /**< system variable, COMMAND$  @ingroup var */
-#define SYSVAR_X            13 /**< system variable, X         @ingroup var */
-#define SYSVAR_Y            14 /**< system variable, Y         @ingroup var */
-#define SYSVAR_Z            15 /**< system variable, Z         @ingroup var */
-#define SYSVAR_VIDADR       16 /**< system variable, VIDADR    @ingroup var */
-#define SYSVAR_COUNT        17 /**< number of system variables @ingroup var */
+#define SYSVAR_SBVER        0  /**< system variable, SBVER     @ingroup var */
+#define SYSVAR_PI           1  /**< system variable, PI        @ingroup var */
+#define SYSVAR_XMAX         2  /**< system variable, XMAX      @ingroup var */
+#define SYSVAR_YMAX         3  /**< system variable, YMAX      @ingroup var */
+#define SYSVAR_TRUE         4  /**< system variable, TRUE      @ingroup var */
+#define SYSVAR_FALSE        5  /**< system variable, FALSE     @ingroup var */
+#define SYSVAR_LINECHART    6  /**< system variable, LINECHART @ingroup var */
+#define SYSVAR_BARCHART     7  /**< system variable, BARCHART  @ingroup var */
+#define SYSVAR_PWD          8  /**< system variable, PWD$      @ingroup var */
+#define SYSVAR_HOME         9  /**< system variable, HOME$     @ingroup var */
+#define SYSVAR_COMMAND      10 /**< system variable, COMMAND$  @ingroup var */
+#define SYSVAR_X            11 /**< system variable, X         @ingroup var */
+#define SYSVAR_Y            12 /**< system variable, Y         @ingroup var */
+#define SYSVAR_Z            13 /**< system variable, Z         @ingroup var */
 
 /**
  * @ingroup var
